# blaze-markup

./: .ghci  .gitignore  .travis.yml  CHANGELOG  CHANGES  Makefile  README.markdown  blaze-markup.cabal  cabal.haskell-ci
.github/workflows/: haskell-ci.yml
benchmarks/: BenchmarkUtils.hs  HtmlBenchmarks.hs  Main.hs  RunHtmlBenchmarks.hs
benchmarks/bigtable/: erubi.rb
src/Text/: Blaze.hs
src/Text/Blaze/: Internal.hs
src/Text/Blaze/Renderer/: Pretty.hs  String.hs  Text.hs  Utf8.hs
tests/: TestSuite.hs
tests/Text/Blaze/: Tests.hs
tests/Text/Blaze/Tests/: Util.hs
